# forgettable

./: .gitignore  CLAUDE.md  Makefile  docker-compose.yml  pyproject.toml
.claude/: settings.json
frontend/: Dockerfile  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  Chat.tsx  Part.tsx  index.css  main.tsx
frontend/src/components/: preview-pane.tsx  theme-provider.tsx
frontend/src/components/ai-elements/: code-block.tsx  conversation.tsx  loader.tsx  message.tsx  prompt-input.tsx  response.tsx  tool.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  scroll-area.tsx  textarea.tsx  tooltip.tsx
frontend/src/lib/: tool-icons.tsx
services/go-main/: .dockerignore  .golangci.yml  Dockerfile  client.go  config.go  go.mod  go.sum  handlers.go  index.html  main.go  otel.go  sse_parser.go  storage.go  test_go_main.py  test_service.py
services/node-build/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  biome.jsonc  components.json  example_request.json  package.json  pnpm-lock.yaml  prompt.md  test_node_build.py  test_service.py
services/node-build/shadcn/: globals.css
services/node-build/shadcn/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  switch.tsx  table.tsx  tabs.tsx  tooltip.tsx
services/node-build/src/: build.ts  index.ts  instrumentation.ts  schema.ts  server.ts
services/python-agent/: .dockerignore  Dockerfile  Makefile  prompt.md  pyproject.toml  test_python_agent.py
services/python-agent/docs/: react.md  shadcn.md  tailwind.md
services/python-agent/python_agent/: agent.py  cli.py  models.py  server.py
services/python-agent/src/: agent.py  cli.py  models.py  server.py
services/rust-db/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  prompt.md  rustfmt.toml  schema.sql  test_rust_db.py  test_service.py
services/rust-db/.sqlx/: query-120f4a5e4df771b3ddb4c90a59a1a22e0913cd137cc579df7d9166683d6d1d94.json  query-90fb8c9d75a79c23a5dd0b4a2afc597017be477329876c6c4898c0b58bac09c4.json  query-d60ff631ae65376992596b245dc1e9ea3a83bca09be8910f68dc5e49e67d8a16.json
services/rust-db/src/: config.rs  error.rs  main.rs  models.rs  routes.rs
services/rust-db/src/handlers/: entries.rs  mod.rs  projects.rs
