[project]
name = "python-agent"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "logfire[fastapi,httpx]>=4.17.0",
    "pydantic-ai-slim[anthropic]>=1.40.0",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
python-agent = "python_agent.cli:main"
